--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 Metrics/LineLength:
-  Max: 120
+  Max: 130
 Metrics/MethodLength:
-  Max: 15
+  Max: 30
+Metrics/BlockLength:
+  Max: 80
 Documentation:
   Enabled: false
 AllCops:
